--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,11 +16,13 @@
         android:text="@string/s"
         android:id="@+id/startButton"
         android:background="#ffd180"
-        android:layout_above="@+id/viEw1"
+        android:layout_above="@+id/viEw1" />
     <View
         android:layout_alignLeft="@+id/quitButton"
         android:layout_alignStart="@+id/quitButton"
-        android:layout_above="@+id/settingsButton" />
+        android:layout_above="@+id/settingsButton"
+        android:layout_height="match_parent"
+        android:layout_width="match_parent" />
 
     <Button
         android:layout_width="wrap_content"
